--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,5 +21,14 @@ jobs:
     steps:
       - checkout
 
+      - restore_cache:
+        keys:
+          - go-mod-v1-{{ checksum "go.sum" }}
+
       # specify any bash command here prefixed with `run: `
       - run: make test
+
+      - save_cache:
+          key: go-mod-v1-{{ checksum "go.sum" }}
+          paths:
+            - "/go/pkg/mod"
